force-app/main/default/objects/Campaign/fields/Accumulative__c.field-meta.xml
<CustomField>
    <fullName>Accumulative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se caso este campo esteja marcado, essa campanha poderá ser aplicada junto com outras campanhas no produto do pedido.</description>
    <inlineHelpText>Se caso este campo esteja marcado, essa campanha poderá ser aplicada junto com outras campanhas no produto do pedido.</inlineHelpText>
    <label>Campanha Acumulativa</label>
    <type>Checkbox</type>
</CustomField>