force-app/main/default/objects/Campaign/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <label>Setor de Atividade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalListActivitySector</valueSetName>
    </valueSet>
</CustomField>