force-app/main/default/objects/Campaign/fields/CampaignNumber__c.field-meta.xml
<CustomField>
    <fullName>CampaignNumber__c</fullName>
    <displayFormat>CAM-{0000}</displayFormat>
    <label>Número da Campanha</label>
    <type>AutoNumber</type>
</CustomField>