force-app/main/default/objects/Campaign/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se caso este campo for marcado, o desconto da campanha só será concedido se todos os produtos da campanha forem vendidos no mesmo pedido, ou seja, o usuário precisa lançar o pacote completo para habilitar o desconto.</description>
    <inlineHelpText>Se caso este campo for marcado, o desconto da campanha só será concedido se todos os produtos da campanha forem vendidos no mesmo pedido, ou seja, o usuário precisa lançar o pacote completo para habilitar o desconto.</inlineHelpText>
    <label>Vender todos os produtos?</label>
    <type>Checkbox</type>
</CustomField>