force-app/main/default/objects/Campaign/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Campanhas</relationshipLabel>
    <relationshipName>Campanhas</relationshipName>
    <type>Lookup</type>
</CustomField>