force-app/main/default/objects/Campaign/fields/DiscountOrder__c.field-meta.xml
<CustomField>
    <fullName>DiscountOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso este campo for marcado, o desconto da campanha irá incidir sobre todos os produtos do pedido e não apenas aos produtos da campanha.</description>
    <inlineHelpText>Caso este campo for marcado, o desconto da campanha irá incidir sobre todos os produtos do pedido e não apenas aos produtos da campanha.</inlineHelpText>
    <label>Desconto aplicado em todo o pedido</label>
    <type>Checkbox</type>
</CustomField>