force-app/main/default/objects/Campaign/fields/OrderRecordType__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordType__c</fullName>
    <label>Tipo de Pedido</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalListOrderTypes</valueSetName>
    </valueSet>
</CustomField>