force-app/main/default/objects/Campaign/fields/ValidaErroAtivacao__c.field-meta.xml
<CustomField>
    <fullName>ValidaErroAtivacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para ser usado no flow para verificar se a campanha possui publico alvo antes de ativar a campanha.</description>
    <label>ValidaErroAtivacao</label>
    <type>Checkbox</type>
</CustomField>