force-app/main/default/objects/Campaign/recordTypes/ForcaAgro.recordType-meta.xml
<RecordType>
    <fullName>ForcaAgro</fullName>
    <active>true</active>
    <label>ForcaAgro</label>
</RecordType>