force-app/main/default/objects/Campaign/recordTypes/Industry.recordType-meta.xml
<RecordType>
    <fullName>Industry</fullName>
    <active>true</active>
    <label>Indústria</label>
</RecordType>