force-app/main/default/objects/Campaign/validationRules/ValidaDataInicio.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaDataInicio</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNULL(CreatedDate), 
StartDate &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Data de início deve ser maior ou igual a hoje</errorMessage>
</ValidationRule>