force-app/main/default/objects/Campaign/validationRules/VerificaPublicoAlvo.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificaPublicoAlvo</fullName>
    <active>true</active>
    <description>Verifica se o campo ValidaErroAtivacao está True por não conter um publico alvo da campanha e não permite salvar o registro.</description>
    <errorConditionFormula>ValidaErroAtivacao__c = TRUE</errorConditionFormula>
    <errorMessage>Não é possível ativar uma campanha sem informar um público alvo!</errorMessage>
</ValidationRule>