force-app/main/default/objects/Campaign/listViews/CampanhaForcaAgro.listView-meta.xml
<ListView>
    <fullName>CampanhaForcaAgro</fullName>
    <columns>Accumulative__c</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.ForcaAgro</value>
    </filters>
    <label>Campanha ForcaAgro</label>
</ListView>